Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: helm
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      run: helm
  template: 
    metadata: 
      labels: 
        run: helm
    spec: 
      containers: 
        - 
          image: vincent53/helm
          name: helm
          ports: 
            - 
              containerPort: 6000
