service.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: nikhil
spec: 
  ports: 
    - 
      port: 5000
      targetPort: 8080
  selector: 
    app: helm
